functions for opensearch.yml and jvm.options next opensearch.yml: roles, dynamic config jvm.options: dynamic config